--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="YourDescriptionHere">
   <meta name="author" content="862243647">
 
-  <title>agarc - epicgamer</title>
+  <title>Resume Site</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -106,13 +106,8 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2019 - June 2020</span>
           </div>
-        </div>
-
-
-
-      </div>
-
-    </section>
+        </div></div>
+</section>
 
     <hr class="m-0">
 
