--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
+  <meta name="description" content="This is the best resume every pls like and sunscrive my instargam">
   <meta name="author" content="862243647">
 
   <title>Resume Site</title>
@@ -71,13 +71,13 @@
         I'm currently attending the University of California, Riverside for my Undergraduate studies. I intend to continue my schooling at a graduate school on the east coast of the US and enhance my experience as I progress. Traveling is a bonus for me, so I am willing to seek work opportunities away from home in the future. Ultimately, I find myself on the right path and focused on where I want to be.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" href="https://www.instagram.com/joebiden/">
+            <i class="fab fa-instagram"></i>
           </a>
           <a target="_blank" href="https://github.com/agarc650">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/scoobyhistory">
             <i class="fab fa-twitter"></i>
           </a>
           <a target="_blank" href="mailto:agarc650@ucr.edu">
