--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
         I'm currently attending the University of California, Riverside for my Undergraduate studies. I intend to continue my schooling at a graduate school on the east coast of the US and enhance my experience as I progress. Traveling is a bonus for me, so I am willing to seek work opportunities away from home in the future. Ultimately, I find myself on the right path and focused on where I want to be.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://www.instagram.com/joebiden/">
-            <i class="fab fa-instagram"></i>
+          <a target="_blank" id="linkedin" href="https://www.instagram.com/joebiden/">
+            <i class="fab fa-linked-in"></i>
           </a>
-          <a target="_blank" href="https://github.com/agarc650">
+          <a target="_blank" id="github" href="https://github.com/agarc650">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com/scoobyhistory">
+          <a target="_blank" id="twitter" href="https://twitter.com/scoobyhistory">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:agarc650@ucr.edu">
+          <a target="_blank" id="email" href="mailto:agarc650@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
