--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </p>
         <div class="social-icons">
           <a target="_blank" id="linkedin" href="https://www.instagram.com/joebiden/">
-            <i class="fab fa-linked-in"></i>
+            <i class="fab fa-linkedin-in"></i>
           </a>
           <a target="_blank" id="github" href="https://github.com/agarc650">
             <i class="fab fa-github"></i>
